Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- HEADER -->
   <header class="header">
     <div class="header-inner">
-      <img src="images/logo.png" alt="Acquisition Engine" class="logo" />
+      <img src="logo.png" alt="Acquisition Engine" class="logo" />
 
       <nav class="nav">
         <a href="#proof">Results</a>
@@ -696,3 +696,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
