Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -390,147 +390,154 @@
     </div>
   </section>
 
-  <!-- SECTION 4: Before vs After (Autopilot) -->
-  <section class="section section-compare" id="results">
-    <div class="container compare">
-      <div class="compare-head reveal">
-        <p class="kicker">Before vs after</p>
-        <h2>From chaos to autopilot.</h2>
-        <p class="sub">
-          Most businesses don’t lose because they’re bad — they lose because follow-up is inconsistent.
-          Acquisition Engine installs the system and runs it daily across trades, solar, agencies, and local services.
-        </p>
-      </div>
 
-      <div class="compare-grid">
-        <article class="compare-card before reveal">
-          <div class="compare-top">
-            <span class="badge bad">Before</span>
-            <h3>Owner-run, inconsistent follow-up</h3>
-          </div>
-
-          <ul class="compare-list">
-            <li><span class="dot bad"></span> Enquiries sit too long</li>
-            <li><span class="dot bad"></span> Missed calls + slow replies</li>
-            <li><span class="dot bad"></span> Leads go cold / get lost</li>
-            <li><span class="dot bad"></span> No visibility on ROI</li>
-            <li><span class="dot bad"></span> Feast-or-famine months</li>
-          </ul>
-
-          <div class="signal">
-            <div class="signal-row">
-              <span class="signal-label">Speed-to-lead</span>
-              <div class="meter"><div class="meter-fill" style="--w: 28%"></div></div>
-            </div>
-            <div class="signal-row">
-              <span class="signal-label">Booked calls</span>
-              <div class="meter"><div class="meter-fill" style="--w: 35%"></div></div>
-            </div>
-            <div class="signal-row">
-              <span class="signal-label">Close rate</span>
-              <div class="meter"><div class="meter-fill" style="--w: 22%"></div></div>
-            </div>
-          </div>
-        </article>
-
-        <article class="compare-card after reveal">
-          <div class="compare-top">
-            <span class="badge good">After</span>
-            <h3>Managed system that runs daily</h3>
-          </div>
-
-          <ul class="compare-list">
-            <li><span class="dot good"></span> Enquiries contacted fast (minutes, not hours)</li>
-            <li><span class="dot good"></span> Receptionist team follows up for you</li>
-            <li><span class="dot good"></span> Calendar fills with qualified bookings</li>
-            <li><span class="dot good"></span> Weekly reporting + improvements</li>
-            <li><span class="dot good"></span> Consistent pipeline you can scale</li>
-          </ul>
-
-          <div class="signal">
-            <div class="signal-row">
-              <span class="signal-label">Speed-to-lead</span>
-              <div class="meter"><div class="meter-fill good" style="--w: 88%"></div></div>
-            </div>
-            <div class="signal-row">
-              <span class="signal-label">Booked calls</span>
-              <div class="meter"><div class="meter-fill good" style="--w: 78%"></div></div>
-            </div>
-            <div class="signal-row">
-              <span class="signal-label">Close rate</span>
-              <div class="meter"><div class="meter-fill good" style="--w: 66%"></div></div>
-            </div>
-          </div>
-        </article>
-
-        <article class="autopilot-strip reveal">
-          <div class="auto-left">
-            <h3>What “autopilot” actually means</h3>
-            <p>
-              While you do delivery, the engine handles:
-              <strong>new enquiries → calls → follow-up → bookings → reporting.</strong>
-            </p>
-
-            <div class="auto-stats">
-              <div class="stat">
-                <span class="stat-label">Typical lift</span>
-                <span class="stat-value">+5–10 wins / month</span>
-              </div>
-              <div class="stat">
-                <span class="stat-label">Big win example</span>
-                <span class="stat-value">$500k+ deal closed</span>
-              </div>
-            </div>
-
-            <div class="auto-cta">
-              <a class="btn-primary large" href="#book" data-book>Book a 15-minute call</a>
-              <a class="btn-secondary" href="#pricing">See pricing</a>
-            </div>
-          </div>
-
-          <div class="auto-right">
-            <div class="timeline" aria-label="Autopilot timeline">
-              <div class="t-item">
-                <div class="t-dot"></div>
-                <div class="t-content">
-                  <span class="t-title">Enquiry comes in</span>
-                  <span class="t-sub">Form / call / message</span>
-                </div>
-              </div>
-
-              <div class="t-item">
-                <div class="t-dot"></div>
-                <div class="t-content">
-                  <span class="t-title">Receptionist follows up</span>
-                  <span class="t-sub">Calls + qualifies</span>
-                </div>
-              </div>
-
-              <div class="t-item">
-                <div class="t-dot"></div>
-                <div class="t-content">
-                  <span class="t-title">Booking confirmed</span>
-                  <span class="t-sub">Calendar filled</span>
-                </div>
-              </div>
-
-              <div class="t-item">
-                <div class="t-dot"></div>
-                <div class="t-content">
-                  <span class="t-title">Weekly optimisation</span>
-                  <span class="t-sub">Scale what works</span>
-                </div>
-              </div>
-
-              <div class="t-line" aria-hidden="true"></div>
-              <div class="t-progress" id="timelineProgress" aria-hidden="true"></div>
-            </div>
-          </div>
-        </article>
-      </div>
+<!-- SECTION 4: Before vs After (Autopilot) -->
+<section class="section section-compare" id="results">
+  <div class="container compare">
+    <div class="compare-head reveal">
+      <p class="kicker">Before vs after</p>
+      <h2>From chaos to autopilot.</h2>
+      <p class="sub">
+        Most businesses don’t lose because they’re bad — they lose because follow-up is inconsistent.
+        Acquisition Engine gives you <strong>the team, the playbook, and the daily execution</strong> to turn enquiries into booked calls
+        across trades, solar, agencies, and local services.
+      </p>
     </div>
-  </section>
 
+    <div class="compare-grid">
+      <!-- BEFORE -->
+      <article class="compare-card before reveal">
+        <div class="compare-top">
+          <span class="badge bad">Before</span>
+          <h3>Owner-run, inconsistent follow-up</h3>
+        </div>
+
+        <ul class="compare-list">
+          <li><span class="dot bad"></span> Enquiries sit too long</li>
+          <li><span class="dot bad"></span> Missed calls + slow replies</li>
+          <li><span class="dot bad"></span> Leads go cold / get lost</li>
+          <li><span class="dot bad"></span> No clear tracking of what’s working</li>
+          <li><span class="dot bad"></span> Feast-or-famine months</li>
+        </ul>
+
+        <div class="signal">
+          <div class="signal-row">
+            <span class="signal-label">Speed-to-lead</span>
+            <div class="meter"><div class="meter-fill" style="--w: 28%"></div></div>
+          </div>
+          <div class="signal-row">
+            <span class="signal-label">Booked calls</span>
+            <div class="meter"><div class="meter-fill" style="--w: 35%"></div></div>
+          </div>
+          <div class="signal-row">
+            <span class="signal-label">Close rate</span>
+            <div class="meter"><div class="meter-fill" style="--w: 22%"></div></div>
+          </div>
+        </div>
+      </article>
+
+      <!-- AFTER -->
+      <article class="compare-card after reveal">
+        <div class="compare-top">
+          <span class="badge good">After</span>
+          <h3>A managed team that runs the pipeline daily</h3>
+        </div>
+
+        <ul class="compare-list">
+          <li><span class="dot good"></span> Enquiries contacted fast (minutes, not hours)</li>
+          <li><span class="dot good"></span> Receptionist team calls + follows up for you</li>
+          <li><span class="dot good"></span> Leads qualified and booked into your calendar</li>
+          <li><span class="dot good"></span> Weekly reporting + improvements</li>
+          <li><span class="dot good"></span> Consistent pipeline you can scale</li>
+        </ul>
+
+        <div class="signal">
+          <div class="signal-row">
+            <span class="signal-label">Speed-to-lead</span>
+            <div class="meter"><div class="meter-fill good" style="--w: 88%"></div></div>
+          </div>
+          <div class="signal-row">
+            <span class="signal-label">Booked calls</span>
+            <div class="meter"><div class="meter-fill good" style="--w: 78%"></div></div>
+          </div>
+          <div class="signal-row">
+            <span class="signal-label">Close rate</span>
+            <div class="meter"><div class="meter-fill good" style="--w: 66%"></div></div>
+          </div>
+        </div>
+      </article>
+
+      <!-- AUTOPILOT STRIP -->
+      <article class="autopilot-strip reveal">
+        <div class="auto-left">
+          <h3>What “autopilot” actually means</h3>
+          <p>
+            While you deliver the work, <strong>our team handles the follow-up and admin</strong>:
+            <strong>new enquiries → calls → qualification → bookings → reporting.</strong>
+          </p>
+
+          <div class="auto-stats">
+            <div class="stat">
+              <span class="stat-label">Typical lift</span>
+              <span class="stat-value">+5–10 jobs / month</span>
+            </div>
+            <div class="stat">
+              <span class="stat-label">Big win example</span>
+              <span class="stat-value">$500k+ job closed</span>
+            </div>
+          </div>
+
+          <div class="auto-cta">
+            <a class="btn-primary large" href="#book" data-book>Book a 15-minute call</a>
+            <a class="btn-secondary" href="#pricing">See pricing</a>
+          </div>
+        </div>
+
+        <div class="auto-right">
+          <!-- Animated timeline -->
+          <div class="timeline" aria-label="Autopilot timeline">
+            <div class="t-item">
+              <div class="t-dot"></div>
+              <div class="t-content">
+                <span class="t-title">Enquiry comes in</span>
+                <span class="t-sub">Form / call / message</span>
+              </div>
+            </div>
+
+            <div class="t-item">
+              <div class="t-dot"></div>
+              <div class="t-content">
+                <span class="t-title">Receptionist follow-up</span>
+                <span class="t-sub">Calls + qualifies</span>
+              </div>
+            </div>
+
+            <div class="t-item">
+              <div class="t-dot"></div>
+              <div class="t-content">
+                <span class="t-title">Booking confirmed</span>
+                <span class="t-sub">Calendar filled</span>
+              </div>
+            </div>
+
+            <div class="t-item">
+              <div class="t-dot"></div>
+              <div class="t-content">
+                <span class="t-title">Weekly optimisation</span>
+                <span class="t-sub">Improve scripts + scale what works</span>
+              </div>
+            </div>
+
+            <div class="t-line" aria-hidden="true"></div>
+            <div class="t-progress" id="timelineProgress" aria-hidden="true"></div>
+          </div>
+        </div>
+      </article>
+    </div>
+  </div>
+</section>
+
+    
   <!-- SECTION 5: Pricing + Guarantee -->
   <section class="section section-pricing" id="pricing">
     <div class="container">
@@ -696,4 +703,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
