--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Acquisition Engine</title>
+  <title>Oaks Acquisition </title>
 
   <link rel="stylesheet" href="styles.css" />
 
@@ -26,7 +26,7 @@
   <!-- HEADER -->
   <header class="header">
     <div class="header-inner">
-      <img src="logo.png" alt="Acquisition Engine" class="logo" />
+      <img src="logo1.png" alt="Acquisition Engine" class="logo" />
 
       <nav class="nav">
         <a href="#proof">Results</a>
@@ -703,5 +703,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
