--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
     <div class="container">
       <div class="footer-grid">
         <div class="footer-col">
-          <img src="images/logo.png" alt="Acquisition Engine" class="footer-logo" />
+          <img src="images/logo2.png" alt="Acquisition Engine" class="footer-logo" />
           <p class="footer-desc">
             A fully managed acquisition + follow-up engine for tradies, solar, agencies, and service businesses.
           </p>
@@ -703,6 +703,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
