Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -433,11 +433,11 @@
           </div>
 
           <ul class="compare-list">
-            <li><span class="dot bad"></span> Enquiries sit too long</li>
-            <li><span class="dot bad"></span> Missed calls + slow replies</li>
-            <li><span class="dot bad"></span> Leads go cold / get lost</li>
-            <li><span class="dot bad"></span> No clear tracking of what’s working</li>
-            <li><span class="dot bad"></span> Feast-or-famine months</li>
+            <li><span class="compare-dot bad"></span> Enquiries sit too long</li>
+            <li><span class="compare-dot bad"></span> Missed calls + slow replies</li>
+            <li><span class="compare-dot bad"></span> Leads go cold / get lost</li>
+            <li><span class="compare-dot bad"></span> No clear tracking of what’s working</li>
+            <li><span class="compare-dot bad"></span> Feast-or-famine months</li>
           </ul>
 
           <div class="signal">
@@ -464,11 +464,11 @@
           </div>
 
           <ul class="compare-list">
-            <li><span class="dot good"></span> Enquiries contacted fast (minutes, not hours)</li>
-            <li><span class="dot good"></span> Receptionist team calls + follows up for you</li>
-            <li><span class="dot good"></span> Leads qualified and booked into your calendar</li>
-            <li><span class="dot good"></span> Weekly reporting + improvements</li>
-            <li><span class="dot good"></span> Consistent pipeline you can scale</li>
+            <li><span class="compare-dot good"></span> Enquiries contacted fast (minutes, not hours)</li>
+            <li><span class="compare-dot good"></span> Receptionist team calls + follows up for you</li>
+            <li><span class="compare-dot good"></span> Leads qualified and booked into your calendar</li>
+            <li><span class="compare-dot good"></span> Weekly reporting + improvements</li>
+            <li><span class="compare-dot good"></span> Consistent pipeline you can scale</li>
           </ul>
 
           <div class="signal">
