--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="icon" href="/logo2.png" sizes="any">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -376,3 +378,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
