Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -308,6 +308,27 @@
     </div>
   </section>
 
+  <section class="section section-book" id="book" aria-label="Book a call">
+  <div class="container">
+    <div class="book-head reveal">
+      <p class="kicker">Book a call</p>
+      <h2>Let’s build your pipeline together.</h2>
+      <p class="sub">Pick a time that works. We’ll map your offer, your follow-up, and the fastest path to booked calls.</p>
+    </div>
+
+    <div class="book-card reveal">
+      <div
+        class="calendly-inline-widget"
+        data-url="https://calendly.com/jordan-burkett/get-more-reno-jobs"
+        style="min-width:320px;height:760px;"
+      ></div>
+    </div>
+  </div>
+
+  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
+</section>
+
+
   <!-- (rest of your HTML unchanged until footer) -->
 
   <!-- FOOTER -->
@@ -378,4 +399,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
